tests/baselines/reference/errorsOnImportedSymbol.errors.txt
==== tests/cases/compiler/errorsOnImportedSymbol_1.ts (2 errors) ====
    import Sammy = require("errorsOnImportedSymbol_0");
    var x = new Sammy.Sammy();
                ~~~~~
!!! error TS2095: Could not find symbol 'Sammy'.
    var y = Sammy.Sammy(); 
            ~~~~~
!!! error TS2095: Could not find symbol 'Sammy'.
    
    
==== tests/cases/compiler/errorsOnImportedSymbol_0.ts (0 errors) ====
    
    interface Sammy {
        new (): any;
        (): number;
    }
    export = Sammy;
    